--- a/com-dummy-framework-common/pom.xml
+++ b/com-dummy-framework-common/pom.xml
@@ -12,13 +12,10 @@
     <artifactId>com-dummy-framework-common</artifactId>
 
     <dependencies>
-
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-commons</artifactId>
-            <version>1.3.5.RELEASE</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
-
     </dependencies>
 
 </project>
