--- a/com-dummy-framework-core/com-dummy-framework-core-controller/pom.xml
+++ b/com-dummy-framework-core/com-dummy-framework-core-controller/pom.xml
@@ -3,12 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>com-dummy-framework</artifactId>
+        <artifactId>com-dummy-framework-core</artifactId>
         <groupId>com.dummy.framework</groupId>
         <version>0.0.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com-dummy-framework-utils</artifactId>
+    <artifactId>com-dummy-framework-core-controller</artifactId>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
