--- a/com-dummy-framework-core/com-dummy-framework-core-rpc/com-dummy-framework-core-rpc-feign/pom.xml
+++ b/com-dummy-framework-core/com-dummy-framework-core-rpc/com-dummy-framework-core-rpc-feign/pom.xml
@@ -3,14 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>com-dummy-framework</artifactId>
+        <artifactId>com-dummy-framework-core-rpc</artifactId>
         <groupId>com.dummy.framework</groupId>
         <version>0.0.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com-dummy-framework-dependencies</artifactId>
+    <artifactId>com-dummy-framework-core-rpc-feign</artifactId>
 
-    <packaging>pom</packaging>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
