--- a/com-dummy-framework-core/com-dummy-framework-core-rpc/pom.xml
+++ b/com-dummy-framework-core/com-dummy-framework-core-rpc/pom.xml
@@ -3,12 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>com-dummy-framework</artifactId>
+        <artifactId>com-dummy-framework-core</artifactId>
         <groupId>com.dummy.framework</groupId>
         <version>0.0.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com-dummy-framework-utils</artifactId>
+    <artifactId>com-dummy-framework-core-rpc</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>com-dummy-framework-core-rpc-feign</module>
+    </modules>
 
 </project>
