--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
 
     <parent>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.19.RELEASE</version>
+        <artifactId>spring-boot-parent</artifactId>
+        <version>2.0.2.RELEASE</version>
+        <relativePath/>
     </parent>
 
     <modules>
@@ -21,15 +22,15 @@
         <module>com-dummy-framework-common</module>
         <module>com-dummy-framework-utils</module>
         <module>com-dummy-framework-third</module>
-        <module>com-dummy-framework-dependencies</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
-        <spring-boot.version>1.5.19.RELEASE</spring-boot.version>
-        <spring-cloud.version>Edgware.SR5</spring-cloud.version>
+        <com-dummy-framework.version>0.0.1.RELEASE</com-dummy-framework.version>
     </properties>
 
     <dependencyManagement>
@@ -38,11 +39,59 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
+                <version>Finchley.RC2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.dummy.framework</groupId>
+                <artifactId>com-dummy-framework-common</artifactId>
+                <version>${com-dummy-framework.version}</version>
             </dependency>
 
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <addResources>true</addResources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
