添加日志模块

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>com-dummy-framework-common</module>
         <module>com-dummy-framework-utils</module>
         <module>com-dummy-framework-third</module>
+        <module>com-dummy-framework-log</module>
     </modules>
 
     <properties>
