--- a/com-dummy-framework-core/pom.xml
+++ b/com-dummy-framework-core/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
