--- a/com-dummy-framework-core/com-dummy-framework-core-data/com-dummy-framework-core-data-redis/pom.xml
+++ b/com-dummy-framework-core/com-dummy-framework-core-data/com-dummy-framework-core-data-redis/pom.xml
@@ -11,5 +11,28 @@
 
     <artifactId>com-dummy-framework-core-data-redis</artifactId>
 
+    <properties>
+        <redisson-spring-boot-starter.version>3.9.1</redisson-spring-boot-starter.version>
+    </properties>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>com.dummy.framework</groupId>
+            <artifactId>com-dummy-framework-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dummy.framework</groupId>
+            <artifactId>com-dummy-framework-core-data-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>${redisson-spring-boot-starter.version}</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
