完成对mybatis基础封装和测试

--- a/com-dummy-framework-core/com-dummy-framework-core-data/com-dummy-framework-core-data-common/pom.xml
+++ b/com-dummy-framework-core/com-dummy-framework-core-data/com-dummy-framework-core-data-common/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>com-dummy-framework-core-data-common</artifactId>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>com.dummy.framework</groupId>
+            <artifactId>com-dummy-framework-utils</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
