--- a/com-dummy-framework-core/com-dummy-framework-core-data/com-dummy-framework-core-data-mybatis/src/test/resources/application.yml
+++ b/com-dummy-framework-core/com-dummy-framework-core-data/com-dummy-framework-core-data-mybatis/src/test/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test?characterEncoding=UTF-8&useSSL=true
-    username: root
-    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.173.103:3306/test?characterEncoding=UTF-8&useSSL=true&serverTimezone=UTC
+    username: vin
+    password: vin
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
@@ -16,3 +16,8 @@ logging:
           core:
             data:
               db: debug
+dummy:
+  generator-type: snow_flake
+  snowflake-strategy:
+    worker-id: 5
+    data-center-id: 5
