--- a/com-dummy-framework-common/pom.xml
+++ b/com-dummy-framework-common/pom.xml
@@ -11,4 +11,11 @@
 
     <artifactId>com-dummy-framework-common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
