--- a/com-dummy-framework-core/pom.xml
+++ b/com-dummy-framework-core/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
