--- a/pom.xml
+++ b/pom.xml
@@ -2,127 +2,93 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.dummy.framework</groupId>
-    <artifactId>com-dummy-framework</artifactId>
-    <version>0.0.1.RELEASE</version>
+    <groupId>com.dummyframework</groupId>
+    <artifactId>dummy</artifactId>
+    <version>1.0.0.RELEASE</version>
     <packaging>pom</packaging>
     <name>dummy</name>
-    <description>因为搭建框架的时候正在听傀儡的磁带</description>
+    <description>傀儡</description>
     <url>https://github.com/kanghouchao/dummy</url>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
-        <relativePath/>
-    </parent>
+    <licenses>
+        <license>
+            <name>Apache License</name>
+            <url>http://www.apache.org/licenses/</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>vincent</id>
+            <email>hchkang8710@gmail.com</email>
+            <name>kanghouchao</name>
+            <roles>
+                <role>Java Development Engineer</role>
+            </roles>
+            <timezone>8</timezone>
+        </developer>
+    </developers>
 
     <modules>
-        <module>com-dummy-framework-core</module>
-        <module>com-dummy-framework-common</module>
-        <module>com-dummy-framework-utils</module>
-        <module>com-dummy-framework-third</module>
-        <module>com-dummy-framework-log</module>
-        <module>com-dummy-framework-mq</module>
-        <module>com-dummy-framework-zuul</module>
     </modules>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <java.version>1.8</java.version>
-        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
-        <com-dummy-framework.version>0.0.1.RELEASE</com-dummy-framework.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <spring.boot.version>2.2.7.RELEASE</spring.boot.version>
+        <spring.cloud.version>Hoxton.SR5</spring.cloud.version>
+        <spring.platform.version>Cairo-SR8</spring.platform.version>
+        <alibaba.cloud.version>2.2.1.RELEASE</alibaba.cloud.version>
+
     </properties>
 
     <dependencyManagement>
         <dependencies>
-
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Finchley.RC2</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
             <dependency>
-                <groupId>com.dummy.framework</groupId>
-                <artifactId>com-dummy-framework-common</artifactId>
-                <version>${com-dummy-framework.version}</version>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
-
             <dependency>
-                <groupId>com.dummy.framework</groupId>
-                <artifactId>com-dummy-framework-utils</artifactId>
-                <version>${com-dummy-framework.version}</version>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>{alibaba.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
-
             <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-annotations</artifactId>
-                <version>1.5.22</version>
+                <groupId>io.spring.platform</groupId>
+                <artifactId>platform-bom</artifactId>
+                <version>${spring.platform.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 
-    <dependencies>
 
-        <dependency>
-            <groupId>com.dummy.framework</groupId>
-            <artifactId>com-dummy-framework-common</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
-    <repositories>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>dummy-nexus</id>
+            <url>http://127.0.0.1:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
         <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>http://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <id>dummy-nexus</id>
+            <url>http://127.0.0.1:8081/repository/maven-releases/</url>
         </repository>
-    </repositories>
+    </distributionManagement>
 
 </project>
