--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
     </developers>
 
     <modules>
+        <module>dummy-common</module>
+        <module>dummy-tools</module>
+        <module>dummy-expand</module>
+        <module>dummy-domain</module>
     </modules>
 
     <properties>
@@ -79,6 +83,16 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.dummyframework</groupId>
+                <artifactId>dummy-common</artifactId>
+                <version>1.0.0.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dummyframework</groupId>
+                <artifactId>dummy-tools</artifactId>
+                <version>1.0.0.RELEASE</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -87,6 +101,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
 
