delete boot & update dependencies

--- a/dummy-expand/hibernate-validator/pom.xml
+++ b/dummy-expand/hibernate-validator/pom.xml
@@ -8,8 +8,20 @@
         <version>1.0.0.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <version>1.0.0.RELEASE</version>
     <artifactId>hibernate-validator</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jboss-logging</artifactId>
+                    <groupId>org.jboss.logging</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
 
 </project>
