--- a/dummy-common/pom.xml
+++ b/dummy-common/pom.xml
@@ -8,8 +8,14 @@
         <version>1.0.0.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <version>1.0.0.RELEASE</version>
     <artifactId>dummy-common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
