--- a/dummy-expand/spring-web/pom.xml
+++ b/dummy-expand/spring-web/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dummy-framework</artifactId>
+        <artifactId>dummy-expand</artifactId>
         <groupId>com.dummyframework</groupId>
         <version>1.0.0.RELEASE</version>
     </parent>
@@ -16,11 +16,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
         </dependency>
     </dependencies>
 
