添加注释和规范

--- a/dummy-tools/pom.xml
+++ b/dummy-tools/pom.xml
@@ -16,6 +16,10 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
