--- a/dummy-bom/pom.xml
+++ b/dummy-bom/pom.xml
@@ -10,7 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>dummy-bom</artifactId>
-
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <dependencyManagement>
         <dependencies>
             <dependency>
