--- a/dummy-expand/mybatis-plus/src/test/resources/log4j.properties
+++ b/dummy-expand/mybatis-plus/src/test/resources/log4j.properties
@@ -20,7 +20,7 @@ log4j.rootLogger=ERROR, stdout
 ### Uncomment for MyBatis logging
 log4j.logger.org.apache.ibatis=ERROR
 
-log4j.logger.com.dummy.framework.mybatisplus.core.hanndlers.EntityHandlerTests=DEBUG, lastEventSavedAppender
+log4j.logger.com.github.kanghouchao.framework.mybatisplus.core.hanndlers.EntityHandlerTests=DEBUG, lastEventSavedAppender
 
 ### Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
