--- a/dummy-common/pom.xml
+++ b/dummy-common/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>dummy-framework</artifactId>
-        <groupId>com.dummyframework</groupId>
+        <groupId>com.github.kanghouchao</groupId>
         <version>1.0.0.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
