--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.kanghouchao</groupId>
     <artifactId>dummy-framework</artifactId>
-    <version>1.0.0.RELEASE</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>dummy-framework</name>
     <description>傀儡</description>
@@ -17,7 +17,10 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-
+    <scm>
+        <url>https://github.com/kanghouchao/dummy-framework.git</url>
+        <connection>https://github.com/kanghouchao/dummy-framework.git</connection>
+    </scm>
     <developers>
         <developer>
             <id>vincent</id>
@@ -111,12 +114,12 @@
             <dependency>
                 <groupId>com.github.kanghouchao</groupId>
                 <artifactId>dummy-common</artifactId>
-                <version>1.0.0.RELEASE</version>
+                <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.github.kanghouchao</groupId>
                 <artifactId>dummy-tools</artifactId>
-                <version>1.0.0.RELEASE</version>
+                <version>1.0.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -161,4 +164,14 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>oss-repo</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>oss-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
